--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-# Python=3.8 with Tensorflow==1.15.5
-tensorflow-gpu==1.15.5
+# Python=3.8 with Tensorflow==1.15.0
+tensorflow-gpu==1.15.0
+tensorflow-serving-api-gpu==1.15.0
 bert-base==0.0.9
 gensim==3.8.3
 jieba
