--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@ tensorboard==1.14.0
 scipy==1.5.4
 bert-base==0.0.9
 gensim==3.8.3
-gast==0.2.2
+gast==0.3.3
 jieba
 numpy==1.16.0
 # protobuf==3.20.0
 protobuf==3.19.6
 seqeval==1.2.2
-scikit-learn
-pandas
+scikit-learn==1.0.2
+pandas==1.1.5
